Implement isomorphic rendering of client app
Pages are rendered statically on the server to '/route/index.html'.
On the client, once the static page has loaded the client app
loads, fetches the data for the site from a data.json file
and then re-renders the app using react-router.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 	<div id="app">{{{body}}}</div>
-	<script src="{{{appScript}}}"></script>
+	<script>var appRoot = '{{appRoot}}';</script>
+	{{#bundles}}
+	<script src="{{.}}"></script>
+	{{/bundles}}
 </body>
 </html>
 
