Improvements for mobile
 * Add meta viewport tag to generated HTML
 * Minimize the vendor deps bundle. The client app is still absurdly
   large given what the app actually does because it includes
   react-tools and thus a complete JavaScript parser (!)
 * Use react_router.Link more widely so that more page transitions
   can be served client-side
 * Update the README

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
 	<meta charset="UTF-8">
 	<title>{{title}}</title>
 	<link rel="stylesheet" href="{{{appTheme}}}">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 	<div id="app">{{{body}}}</div>
 	<script>var appRoot = '{{appRoot}}';</script>
 	{{#bundles}}
-	<script src="{{.}}"></script>
+	<script defer src="{{.}}"></script>
 	{{/bundles}}
 </body>
 </html>
