--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{{title}}</title>
+	<link rel="stylesheet" href="{{{codeTheme}}}">
 	<link rel="stylesheet" href="{{{appTheme}}}">
 	<meta name="viewport" content="width=device-width">
 </head>
